Fix issues drawing near the bottom; Custom scrollbar-design

--- a/src/app/widgets/controls/Controls.module.scss
+++ b/src/app/widgets/controls/Controls.module.scss
@@ -1,14 +1,9 @@
 .controls {
-    @include flex(row, center, center);
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-}
-
-.container {
     @include flex(row, center);
+    position: absolute;
+    transform: translateX(-50%);
+    left: 50%;
+    bottom: 0;
 
     > p {
         @include size(1.5em, 2px);
