--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -2,6 +2,29 @@
 @import '~sassyfication';
 @import './variables';
 
+::-webkit-scrollbar {
+    width: 16px;
+}
+
+::-webkit-scrollbar-thumb,
+::-webkit-scrollbar-track {
+    background-clip: padding-box;
+    border: 4px solid transparent;
+    border-radius: 100px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgba(black, 0.3);
+}
+
+::-webkit-scrollbar-track {
+    background-color: var(--c-secondary-bg);
+}
+
+::-webkit-scrollbar-corner {
+    background: transparent
+}
+
 * {
     margin: 0;
     padding: 0;
